# mypy-crash

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
mypy_crash/: base.py
